package switch2021.project.model.UserStory;

import lombok.Getter;
import switch2021.project.interfaces.TaskContainerID;
import org.apache.commons.lang3.builder.EqualsBuilder;
import switch2021.project.model.valueObject.ProjectID;
import switch2021.project.utils.ValueObject;

import java.util.Objects;


@Getter
public class UserStoryID implements ValueObject<UserStoryID>, TaskContainerID {

    /**
     * Attributes
     **/
    private final ProjectID projectID;
    private final UsTitle usTitle;

    /**
     * Constructor
     **/
    public UserStoryID(ProjectID projectID, UsTitle usTitle) {
        checkUsID(projectID,usTitle);
        this.projectID = projectID;
        this.usTitle = usTitle;
    }

    public UserStoryID(String userStoryIdString) {
        String[] values = userStoryIdString.split("_");// Project_2022_1_As a PO, want to test this string
        this.projectID = new ProjectID(Integer.parseInt(values[2]));
        this.usTitle = new UsTitle(values[3]);
    }

    /**
     * Methods
     **/
    private void checkUsID(ProjectID projectID, UsTitle usTitle) {
        if (projectID.getCode().trim().isEmpty() || usTitle.getTitleUs().trim().isEmpty()){
            throw new IllegalArgumentException("Not valid projectCode and/or US title inserted");
        }
    }


    /**
     * Override
     **/

    @Override
    public String toString() {
        return projectID.getCode() + "_" + usTitle.getTitleUs();
    }

    @Override
    public boolean sameValueAs(final UserStoryID other) {
        return other != null && new EqualsBuilder().
                append(this.projectID, other.projectID).
               append(this.usTitle, other.usTitle).
                isEquals();
    }

    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (o == null || getClass() != o.getClass()) return false;
       final UserStoryID that = (UserStoryID) o;
        return sameValueAs(that);
    }

    @Override
    public int hashCode() {
        return Objects.hash(projectID, usTitle);
    }
}
